# wasm_vogame_test

./: .gitignore  changelog.txt  link_server_dir.bat
client/: .gitignore  CHANGELOG.md  Cargo.toml  build.txt  readme.txt  todo.md
client/client/: Cargo.toml
client/client/src/: addr.rs  error.rs  lib.rs
client/common/: Cargo.toml
client/common/assets/: Cargo.toml
client/common/assets/src/: fs.rs  lib.rs  wasm_fs.rs
client/common/base/: Cargo.toml
client/common/base/src/: lib.rs  userdata_dir.rs
client/common/ecs/: Cargo.toml
client/common/ecs/src/: system.rs
client/common/frontend/: Cargo.toml
client/common/frontend/src/: lib.rs
client/common/net/: Cargo.toml
client/common/net/src/msg/: compression.rs  server.rs
client/common/net/src/sync/: interpolation.rs  packet.rs  sync_ext.rs
client/common/src/: clock.rs  cmd.rs  combat.rs  generation.rs  lib.rs  lottery.rs  path.rs  region.rs  resources.rs  skillset_builder.rs  slowjob.rs  trade.rs  uid.rs
client/common/src/comp/: ability.rs  aura.rs  beam.rs  buff.rs  chat.rs  fluid_dynamics.rs  group.rs  health.rs  invite.rs  mod.rs  ori.rs  pet.rs  poise.rs  projectile.rs  shockwave.rs
client/common/src/comp/inventory/: loadout.rs  loadout_builder.rs  mod.rs  trade_pricing.rs
client/common/src/comp/skillset/: mod.rs
client/common/src/states/: basic_aura.rs  basic_beam.rs  basic_block.rs  basic_melee.rs  basic_ranged.rs  basic_summon.rs  blink.rs  boost.rs  charged_melee.rs  charged_ranged.rs  combo_melee.rs  dash_melee.rs  equipping.rs  leap_melee.rs  repeater_ranged.rs  roll.rs  self_buff.rs  shockwave.rs  spin_melee.rs  sprite_interact.rs  sprite_summon.rs  stunned.rs  use_item.rs  utils.rs
client/common/src/util/: dir.rs  mod.rs
client/common/state/: Cargo.toml
client/common/state/src/: lib.rs  state.rs
client/common/state/src/plugin/: mod.rs
client/common/systems/: Cargo.toml
client/common/systems/src/: aura.rs  beam.rs  buff.rs  interpolation.rs  phys.rs  projectile.rs
client/dep/assets_manager/: Cargo.toml
client/dep/assets_manager/src/: asset.rs  cache.rs  dirs.rs  entry.rs  key.rs  lib.rs
client/dep/assets_manager/src/loader/: mod.rs
client/dep/assets_manager/src/source/: filesystem.rs  mod.rs
client/dep/assets_manager/src/utils/: mod.rs  private.rs
client/dep/auth/authc/: Cargo.toml
client/dep/auth/authc-cli/: Cargo.toml
client/dep/auth/authc/src/: lib.rs
client/dep/hyper/: CHANGELOG.md  Cargo.toml
client/dep/hyper-rustls/: Cargo.toml
client/dep/iced-winit-0.25/: Cargo.toml
client/dep/iced-winit-0.25/examples/todos/: Cargo.toml
client/dep/iced-winit-0.25/web/: Cargo.toml
client/dep/iced-winit-0.25/wgpu/: Cargo.toml
client/dep/iced-winit-0.25/winit/: Cargo.toml
client/dep/iced/core/: Cargo.toml
client/dep/iced/core/src/: lib.rs  time.rs
client/dep/iced/futures/src/: time.rs
client/dep/iced/glutin/src/: application.rs
client/dep/iced/graphics/src/: layer.rs  lib.rs  primitive.rs
client/dep/iced/winit/: Cargo.toml
client/dep/inline-spirv/src/: lib.rs
client/dep/keyboard-keynames/: Cargo.toml
client/dep/quinn/bench/: Cargo.toml
client/dep/quinn/perf/: Cargo.toml
client/dep/quinn/quinn/: Cargo.toml
client/dep/quinn/quinn-udp/: Cargo.toml
client/dep/tokio-rustls/tokio-rustls/: Cargo.toml
client/dep/tokio/benches/: Cargo.toml
client/dep/tokio/examples/: Cargo.toml
client/dep/tokio/tokio/: Cargo.toml
client/dep/tokio/tokio-macros/: Cargo.toml
client/dep/tokio/tokio-stream/: Cargo.toml
client/dep/tokio/tokio-test/: Cargo.toml
client/dep/tokio/tokio-util/: Cargo.toml
client/network/: Cargo.toml
client/network/protocol/: Cargo.toml
client/network/protocol/benches/: protocols.rs
client/network/protocol/src/: handshake.rs  lib.rs  prio.rs  tcp.rs  types.rs
client/network/src/: api.rs  channel.rs  lib.rs  message.rs  metrics.rs  participant.rs  scheduler.rs  util.rs
client/network/tests/: helper.rs  integration.rs
client/test/: Cargo.toml
client/test/src/: fps_counter.rs  lib.rs
client/test/src/common/: mod.rs  xdebug.rs  xtime.rs
client/voxygen/: .gitignore  Cargo.toml  build.rs
client/voxygen/anim/: Cargo.toml
client/voxygen/anim/src/: lib.rs
client/voxygen/egui/: Cargo.toml
client/voxygen/i18n/: Cargo.toml
client/voxygen/i18n/src/: lib.rs  raw.rs
client/voxygen/shaders/: clouds-frag.glsl  figure-frag.glsl  lod-terrain-frag.glsl  postprocess-frag.glsl  sprite-vert.glsl
client/voxygen/shaders/fluid-frag/: shiny.glsl
client/voxygen/shaders/include/: constants.glsl  shadows.glsl
client/voxygen/src/: controller.rs  credits.rs  game_input.rs  lib.rs  main.rs  profile.rs  run.rs  singleplayer.rs  window.rs
client/voxygen/src/audio/: ambient.rs  channel.rs  fader.rs  mod.rs  music.rs  soundcache.rs
client/voxygen/src/hud/: bag.rs  buffs.rs  buttons.rs  chat.rs  crafting.rs  diary.rs  esc_menu.rs  group.rs  item_imgs.rs  map.rs  minimap.rs  mod.rs  popup.rs  prompt_dialog.rs  skillbar.rs  social.rs  trade.rs
client/voxygen/src/mesh/: greedy.rs  terrain.rs
client/voxygen/src/render/: consts.rs  error.rs  instances.rs  mod.rs  renderer.rs  texture.rs
client/voxygen/src/scene/: camera.rs  debug.rs  mod.rs  particle.rs  simple.rs  terrain.rs
client/voxygen/src/session/: interactable.rs  mod.rs  settings_change.rs  target.rs
client/voxygen/src/settings/: control.rs  gamepad.rs  interface.rs  mod.rs  networking.rs
client/voxygen/src/ui/: keyed_jobs.rs  mod.rs
client/voxygen/www/: build_asset.py  index.html  index.js  package-lock.json  package.json  wasm_worker.js  webpack.config.js
client/voxygen/www/assets/: index.json  md5.json
client/voxygen/www/js/: download.js  wasm_worker.js
client/www/: index.js
server/: .gitignore  Cargo.toml  cmd.bat
server/common/assets/src/: lib.rs
server/network/: Cargo.toml
server/network/protocol/: Cargo.toml
server/server/: Cargo.toml
server/server-cli/: Cargo.toml
server/server/src/: login_provider.rs  settings.rs  state_ext.rs
server/server/src/events/: player.rs
server/server/src/sys/: persistence.rs
(+110 files in other folders)
