cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
resolver = "2"
members = [
    "common",
    "common/assets",
    "common/base",
    "common/ecs",
    "common/net",
    "common/state",
    "common/systems",
    "client",
    "voxygen",
    "voxygen/anim",
    "voxygen/i18n",
    "network",
    "network/protocol",
]

# default profile for devs, fast to compile, okay enough to run, no debug information
[profile.dev]
opt-level = 2
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = true
codegen-units = 8
lto = false
incremental = true

# this profile is used for veloren releases, compile time doesn't matter
# we need stacktraces, light debug information, as much checks as possible
# I would like to put it in a seperate `official_release` target, but that doesnt share caches with `cargo test` and `cargo bench`
[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false
panic = "abort" # don't need unwinding so we can skip including the landing pads for that


[patch.crates-io]
vek = { git = "https://gitlab.com/veloren/vek.git", branch = "fix_intrinsics2" }
