cargo-features = ["named-profiles","profile-overrides"]

[workspace]
members = [
    "common",
    "common/assets",
    "common/base",
    "common/ecs",
    "common/net",
    "common/state",
    "common/systems",
    "common/frontend",
    "plugin/api",
    "plugin/derive",
    "plugin/rt",
    "server",
    "server-cli",
    "world",
    "network",
    "network/protocol",
]

[profile.dev]
opt-level = 2
panic = "abort"

[patch.crates-io]
vek = { git = "https://gitlab.com/veloren/vek.git", branch = "fix_intrinsics2" }