[package]
name = "veloren-client"
version = "0.12.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[features]
#del plugin 这个看上去是可以加载外部插件用的
#plugins = ["common-state/plugins"]

simd = ["vek/platform_intrinsics"]
tick_network = []

#需要用cargo的tcp情况
client_tcp =["network/client_tcp"]
default = ["simd","client_tcp"]

#使用websocket的情况
#default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = "../common", features = ["no-assets"] }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-state = { package = "veloren-common-state", path = "../common/state", default-features = false }
common-systems = { package = "veloren-common-systems", path = "../common/systems", default-features = false }
common-net = { package = "veloren-common-net", path = "../common/net" }
network = { package = "veloren-network", path = "../network", features = ["compression"], default-features = false }

tokio = { version = "=1.17.0", default-features = false, features = ["rt-multi-thread"] }
byteorder = "1.3.2"
image = { version = "0.23.12", default-features = false, features = ["png"] }
num = "0.4"
tracing = { version = "0.1", default-features = false }
rayon = "1.5"
specs = { git = "https://github.com/amethyst/specs.git", rev = "f985bec5d456f7b0dd8aae99848f9473c2cd9d46" }
vek = { version = "=0.14.1", features = ["serde"] }
hashbrown = { version = "0.11", features = ["rayon", "serde", "nightly"] }

## logging
termcolor = { version = "1.1", optional = true }
common-frontend = { package = "veloren-common-frontend", path = "../common/frontend", optional = true }