[package]
name = "veloren-client"
version = "0.12.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[features]
simd = ["vek/platform_intrinsics"]
tick_network = []

#需要用cargo的tcp情况
client_tcp =["network/client_tcp"]
default = ["simd","client_tcp"]

#使用websocket的情况
#default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = "../common", features = ["no-assets"] }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-state = { package = "veloren-common-state", path = "../common/state", default-features = false }
common-systems = { package = "veloren-common-systems", path = "../common/systems", default-features = false }
common-net = { package = "veloren-common-net", path = "../common/net" }
network = { package = "veloren-network", path = "../network", features = ["compression"], default-features = false }

tokio = { version = "=1.17.0", default-features = false, features = ["rt"] }
byteorder = "1.3.2"
image = { version = "0.23.12", default-features = false, features = ["png"] }
num = "0.4"
rayon = "1.5"
specs = { git = "https://github.com/amethyst/specs.git", rev = "f985bec5d456f7b0dd8aae99848f9473c2cd9d46" }
vek = { version = "=0.14.1", features = ["serde"] }
hashbrown = { version = "0.11", features = ["rayon", "serde", "nightly"] }

## logging
log = "0.4"