[package]
authors = ["juliancoffee <lightdarkdaughter@gmail.com>", "Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "veloren-common-assets"
description = "Crate for game loading assets for veloren."
version = "0.10.0"

[features]


[dependencies]
lazy_static = "1.4.0"
ron = { version = "0.7", default-features = false }
assets_manager = {path = "../../dep/assets_manager", features = ["bincode", "ron", "json"]}
#解析.vox文件
dot_vox = "4.0"

#图片处理, 格式互转
image = { version = "0.23.12", default-features = false, features = ["png"] }

#log
log = "0.4"


# [target.'cfg(target_arch = "wasm32")'.dependencies]
# assets_manager = {path = "../../dep/assets_manager", features = ["bincode", "ron", "json"]}

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# assets_manager = {version = "0.7", features = ["bincode", "ron", "json"]}

