[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "veloren-common-base"
description = "minimal dependency for crates to now depend on whole common"
version = "0.10.0"

[features]

[dependencies]
tracing = { version = "0.1", default-features = false }
directories-next = "2.0"