[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "veloren-common-ecs"
version = "0.10.0"

[features]

[dependencies]
common-base = { package = "veloren-common-base", path = "../base" }

# ECS
specs = { git = "https://github.com/amethyst/specs.git", features = ["serde", "storage-event-control"], rev = "f985bec5d456f7b0dd8aae99848f9473c2cd9d46" }

#log
log = "0.4"
