[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"
name = "veloren-common-state"
version = "0.10.0"

[features]
simd = ["vek/platform_intrinsics"]
default = ["simd"]

[dependencies]
common = { package = "veloren-common", path = ".." }
common-net = { package = "veloren-common-net", path = "../net" }
common-ecs = { package = "veloren-common-ecs", path = "../ecs" }
common-base = { package = "veloren-common-base", path = "../base" }

rayon = "1.5"
vek = { version = "=0.14.1", features = ["serde"] }

# Data structures
hashbrown = { version = "0.11", features = ["rayon", "serde", "nightly"] }

# ECS
specs = { git = "https://github.com/amethyst/specs.git", features = ["serde", "storage-event-control", "derive"], rev = "f985bec5d456f7b0dd8aae99848f9473c2cd9d46" }


#log
log = "0.4"