[package]
name = "assets_manager"
version = "0.7.2"
authors = ["Benoît du Garreau"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description= "Conveniently load, cache, and reload external resources"

categories = ["caching", "filesystem", "game-development"]
keywords = ["asset", "assets", "cache", "resources"]


[features]
default = ["ahash", "parking_lot"]
json = ["serde_json", "serde"]
ron = ["serde_ron", "serde"]
bincode = ["serde_bincode", "serde"]


[dependencies]
log = {version = "0.4"}

ahash = {version = "0.7.0", default-features = false, optional = true}
parking_lot = {version = "0.11", optional = true}

serde = {version = "1.0", optional = true, features = ["derive"]}
serde_bincode = {version = "1.2", package = "bincode", optional = true}
serde_json = {version = "1.0", optional = true}
serde_ron = {version = "0.7", package = "ron", optional = true}
ab_glyph = {version = "0.2.12", optional = true}
