[package]
name = "veloren-network-protocol"
description = "pure Protocol without any I/O itself"
version = "0.6.0"
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
metrics = ["prometheus"]
trace_pedantic = [] # use for debug only

default = ["metrics"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }

#tracing and metrics
prometheus = { version = "=0.13.0", default-features = false, optional = true }

#stream flags
bitflags = "1.2.1"
rand = { version = "0.8" }

# async traits
async-trait = "0.1.42"
bytes = "^1"
hashbrown = { version = ">=0.9, <0.12" }


#log
log = "0.4"