[package]
name = "veloren-network-protocol"
description = "pure Protocol without any I/O itself"
version = "0.6.0"
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
#stream flags
bitflags = "1.2.1"
rand = { version = "0.8" }

# async traits
async-trait = "0.1.42"
bytes = "^1"
hashbrown = { version = "0.11" }

#log
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1"