[package]
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Imbris <imbrisf@gmail.com>"]
edition = "2021"
name = "veloren-voxygen-anim"
version = "0.10.0"

[features]
#use-dyn-lib = ["lazy_static", "voxygen-dynlib"]
be-dyn-lib = []
simd = ["vek/platform_intrinsics"]

default = ["simd"]

[dependencies]
common = {package = "veloren-common", path = "../../common"}
bytemuck = { version = "1.4", features=["derive"] }
vek = {version = "=0.14.1", features = ["serde"]}

#屏蔽动态更新相关
#voxygen-dynlib = {package = "veloren-voxygen-dynlib", path = "../dynlib", optional = true}

# Hot Reloading
#lazy_static = {version = "1.4.0", optional = true}
